# discord-minecraft-emoji-bot

./: .gitignore  Cargo.toml  Dockerfile  bot.js  build-config.json  getOnlineFaces.js  package-lock.json  package.json
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: branch-validation.yaml  build.yaml  tag.yaml
kubernetes/: kustomization.yaml  statefulset.yaml
secret-injector/: Dockerfile  build-config.json  get-secrets.sh
src/: commands.rs  main.rs  minecraft_api_objects.rs  secret_file_objects.rs  skins.rs
src/commands/: minecraftemote.rs  utils.rs
src/commands/utils/: minecraft.rs
src/commands/utils/minecraft/: minecraft_api_objects.rs  skins.rs
