[package]
name = "discord-minecraft-emoji-bot"
version = "1.13.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.11", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
reqwest = "0.11.11"
image = "0.24.3"
bytes = "1.1.0"
serde = "1.0.143"
base64 = "0.21.2"
serde_json = "1.0.83"
serde_yaml = "0.9"
