[package]
name = "discord-minecraft-emoji-bot"
version = "1.13.33"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.11.11", features = ["json"] }
image = "0.25.0"
bytes = "1.1.0"
serde = "1.0.143"
base64 = "0.22.0"
serde_json = "1.0.83"
serde_yaml = "0.9"
